# tiff-composer

./: .gitignore  README.md  pyproject.toml
src/tests/: dist_test.py
src/tests/functional/: composition.py  distance_cost.py  reading.py  utils_example.py
src/tests/functional/data/: esp_pd_2020_1km.tif
src/tests/unitary/: test_coordinates.py
src/tiffcomposer/: __init__.py
src/tiffcomposer/core/: coordinates.py
src/tiffcomposer/utils/: extent.py  pixel.py
